updates to use crime per capita
still need to think about how to set the color scales

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 			<div id="crime_category" >
 					<form name="crime">
 							<select id="opts" onchange="update(curYear,value)">
+									<option value="TOTAL CRIME">TOTAL CRIME</option>
 									<option value="ARSON">ARSON</option>
 									<option value="ASSAULT">ASSAULT</option>
 									<option value="BATTERY">BATTERY</option>
