--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 <meta charset="utf-8">
 	<style>
 
+	.axis--x path {
+		display: none;
+	}
+
+	.line {
+		fill: none;
+		stroke: steelblue;
+		stroke-width: 1.5px;
+	}
+
 	#wrapper {
     margin-left:1%;
     margin-right:1%;
@@ -19,6 +29,10 @@
 		pointer-events: all;
 	}
 
+	.bottom_background {
+		fill: #fff;
+	}
+
 	.map-layer {
 		fill: #fff;
 		stroke: #aaa;
@@ -30,14 +44,7 @@
 	}
 
 	#slider{
-		width: 1000px;
-		
-	
-		/*
-		position: absolute;
-		top: 700px;
-		left: 0;
-		*/
+		width: 900px;
 	}
 
 	#slider p{
@@ -49,6 +56,11 @@
 	#slider input{
 		width:100%;
 	}
+
+	#wrapper {
+		/*font-size: 0;*/
+	}
+
 	</style>
 	<body>
 		<div id="wrapper">
@@ -102,8 +114,9 @@
 
 			<svg id = 'svgLeft' position = 'absolute'></svg>
 			<svg id = 'svgRight' position = 'absolute'></svg>
+			<svg id = 'svgBottom' position = 'absolute'></svg>
 
-			<script src="https://d3js.org/d3.v3.min.js"></script>
+			<script src="https://d3js.org/d3.v4.min.js"></script>
 			<script type="text/javascript" src="./js/main.js"></script>
 		</div>
 	</body>
