Added bar chat and split out js files
bar chart is still messy and doesnt update based on year yet

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
 		fill: #fff;
 	}
 
+	.bar_background {
+		fill: #eee;
+	}
+
 	.map-layer {
 		fill: #fff;
 		stroke: #aaa;
@@ -106,6 +110,8 @@
 		</div>
 
 		<script src='https://d3js.org/d3.v4.min.js'></script>
-		<script type='text/javascript' src='./js/main.js'></script>
+		<script type='text/javascript' src='./js/mainMaps.js'></script>
+		<script type='text/javascript' src='./js/lineChart.js'></script>
+		<script type='text/javascript' src='./js/stackedBar.js'></script>
 	</body>
 </html>
