uses  js/mainMaps_v2.js

--- a/index.html
+++ b/index.html
@@ -145,7 +145,8 @@
 		</div>
 		<br></br>
 		<script src='https://d3js.org/d3.v4.min.js'></script>
-		<script type='text/javascript' src='./js/mainMaps.js'></script>
+		<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+		<script type='text/javascript' src='./js/mainMaps_v2.js'></script>
 		<script type='text/javascript' src='./js/lineChart.js'></script>
 		<script type='text/javascript' src='./js/stackedBar.js'></script>
 	</body>
