--- a/index.html
+++ b/index.html
@@ -147,7 +147,8 @@
 		<script src='https://d3js.org/d3.v4.min.js'></script>
 		<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 		<script type='text/javascript' src='./js/mainMaps_v2.js'></script>
-		<script type='text/javascript' src='./js/lineChart_v3.js'></script>
+		<script type='text/javascript' src='./js/crimeChart.js'></script>
 		<script type='text/javascript' src='./js/stackedBar.js'></script>
+		<script type='text/javascript' src='./js/heatmap.js'></script>
 	</body>
 </html>
