update landing page

--- a/index.html
+++ b/index.html
@@ -43,21 +43,21 @@ body {font-family: "Lato", sans-serif}
       <h2 class="w3-wide">THE TEAM</h2>
       <br>
       <div class="w3-third">
-        <img src="/images/michael_pic.png" class="w3-round w3-margin-bottom" style="width:70%">
+        <img src="images/michael_pic.png" class="w3-round w3-margin-bottom" style="width:70%">
         <h4>Michael Alexander</h4>
         <p class="w3-opacity"><i>Washington DC</i></p>
         <center><p><a href="https://www.linkedin.com/in/michael-alexander-68089179/" style="width:70%" class="w3-button w3-light-grey w3-block">Contact</a></p></center>
       </div>
       
       <div class="w3-third">
-        <img src="/images/daghan_pic.jpg" class="w3-round w3-margin-bottom" style="width:70%">
+        <img src="images/daghan_pic.jpg" class="w3-round w3-margin-bottom" style="width:70%">
         <h4>Daghan Atlas</h4>
         <p class="w3-opacity"><i>San Francisco, California</i></p>
         <center><p><a href="https://www.linkedin.com/in/daghanaltas/" style="width:70%" class="w3-button w3-light-grey w3-block">Contact</a></p></center>
       </div>
       
       <div class="w3-third">
-        <img src="/images/chris_pic.jpg" class="w3-round w3-margin-bottom" style="width:70%">
+        <img src="images/chris_pic.jpg" class="w3-round w3-margin-bottom" style="width:70%">
         <h4>Christopher Caudill</h4>
         <p class="w3-opacity"><i>Houston, Texas</i></p>
         <center><p><a href="https://www.linkedin.com/in/caudillchristopher/" style="width:70%" class="w3-button w3-light-grey w3-block">Contact</a></p></center>
