--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ body {font-family: "Lato", sans-serif}
 <div class="w3-top">
   <div class="w3-bar w3-black w3-card-2">
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a onclick="window.location.href='/viz.html'" class="w3-bar-item w3-button w3-padding-large w3-hide-small">VIZUALIZATION</a>
+    <a onclick="window.location.href='viz.html'" class="w3-bar-item w3-button w3-padding-large w3-hide-small">VIZUALIZATION</a>
     <a href="https://docs.google.com/presentation/d/1G0jnQHlvsrKoIZRSzlM7QFWdalpCbGnXW7kMw9HLS3Y" class="w3-bar-item w3-button w3-padding-large w3-hide-small">FINAL PRESENTATION</a>
     <a href="https://idl.cs.washington.edu/files/2017-SurpriseMaps-InfoVis.pdf" class="w3-bar-item w3-button w3-padding-large w3-hide-small">MORE INFO ON SURPRISE RATIOS</a>
   </div>
@@ -70,7 +70,7 @@ body {font-family: "Lato", sans-serif}
   <div class="w3-black" id="tour">
     <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
       <h2 class="w3-wide w3-center">CLICK BELOW TO PROCEED</h2>
-      <p class="w3-center"><a onclick="window.location.href='/viz.html'" class="w3-button w3-white w3-round w3-padding-large w3-xlarge">Surprise Maps</a></p>
+      <p class="w3-center"><a onclick="window.location.href='viz.html'" class="w3-button w3-white w3-round w3-padding-large w3-xlarge">Surprise Maps</a></p>
     </div>
   </div>
   
