--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@ body {font-family: "Lato", sans-serif}
 <body>
 
 <!-- Navbar -->
-<div class="w3-top">
-  <div class="w3-bar w3-black w3-card-2">
-    <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a onclick="window.location.href='viz.html'" class="w3-bar-item w3-button w3-padding-large w3-hide-small">VIZUALIZATION</a>
-    <a href="https://docs.google.com/presentation/d/1G0jnQHlvsrKoIZRSzlM7QFWdalpCbGnXW7kMw9HLS3Y" class="w3-bar-item w3-button w3-padding-large w3-hide-small">FINAL PRESENTATION</a>
-    <a href="https://idl.cs.washington.edu/files/2017-SurpriseMaps-InfoVis.pdf" class="w3-bar-item w3-button w3-padding-large w3-hide-small">MORE INFO ON SURPRISE RATIOS</a>
-  </div>
-</div>
+    <div class="w3-top">
+      <div class="w3-bar w3-black w3-card-2">
+        <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+        <a onclick="window.location.href='index.html'" class="w3-bar-item w3-button w3-padding-large w3-hide-small">HOME</a>
+        <a onclick="window.location.href='viz.html'" class="w3-bar-item w3-button w3-padding-large w3-hide-small">VIZUALIZATION</a>
+        <a onclick="window.location.href='slides.html'" class="w3-bar-item w3-button w3-padding-large w3-hide-small">FINAL PRESENTATION</a>
+        <a onclick="window.location.href='surprisePDF.html'" class="w3-bar-item w3-button w3-padding-large w3-hide-small">MORE INFO ON SURPRISE RATIOS</a>
+      </div>
+    </div>
 
 <!-- Navbar on small screens -->
 <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
@@ -33,7 +34,7 @@ body {font-family: "Lato", sans-serif}
 <div class="w3-content" style="max-width:2000px;margin-top:46px">
 
   <!-- The Description Section -->
-  <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
+  <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="desc">
     <h1 class="w3-wide">CHICAGO CRIME SURPRISE MAPS</h1>
     <p class="w3-opacity"><i>W209 Final Project</i></p>
     <p class="w3-justify w3-center">As a part of the Data Visualization & Communication course in UC Berkeley's Master of Information & Data Science (MIDS) program, we've developed a data visualization that can be used to geospatially display Surprise Ratios in regards to Chicago crime. Surprise ratios are a measurement of how the data at hand deviates from prior expectations and can be used to counteract biases in the data. For more information on surprise ratios, select the button in the top navigation bar.</p>
@@ -67,7 +68,7 @@ body {font-family: "Lato", sans-serif}
   </div>
 
   <!-- The Link to Viz Section -->
-  <div class="w3-black" id="tour">
+  <div class="w3-black" id="viz">
     <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
       <h2 class="w3-wide w3-center">CLICK BELOW TO PROCEED</h2>
       <p class="w3-center"><a onclick="window.location.href='viz.html'" class="w3-button w3-white w3-round w3-padding-large w3-xlarge">Surprise Maps</a></p>
