--- a/viz.html
+++ b/viz.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
-<meta charset='utf-8'>
+<title>Chicago Crime Surprise Maps</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<style>
 
 	.axis--x path {
@@ -96,9 +101,8 @@
 	body {
 	    width: 100%;
 	    height:100%;
-	    border: 1px solid gray;
 	    margin:auto;
-	    padding: 1em;
+	    /*padding: 1em;*/
 	}
 
 	h1{
@@ -130,6 +134,20 @@
 
 	</style>
 	<body>
+
+			<!-- Navbar -->
+		<div class="w3-top">
+		  <div class="w3-bar w3-black w3-card-2">
+		    <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+		    <a onclick="window.location.href='index.html'" class="w3-bar-item w3-button w3-padding-large w3-hide-small">HOME</a>
+		    <a onclick="window.location.href='viz.html'" class="w3-bar-item w3-button w3-padding-large w3-hide-small">VIZUALIZATION</a>
+		    <a onclick="window.location.href='slides.html'" class="w3-bar-item w3-button w3-padding-large w3-hide-small">FINAL PRESENTATION</a>
+		    <a onclick="window.location.href='surprisePDF.html'" class="w3-bar-item w3-button w3-padding-large w3-hide-small">MORE INFO ON SURPRISE RATIOS</a>
+		  </div>
+		</div>
+
+
+
 		<center>
 			<h1>Chicago Crime Surprise Maps</h1>
 			<div id='slider'>
