getting ready for the final presentation, still missing hover over the heatmaps

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 				<b>Surprise ratio</b> is a measure of how the data being analyzed deviates from prior expectations.
 				<br>
 				<br>
-				As its name indicates, Surprise ratios are a way to indicate how <i>surprising</i> the data may be. Such surprising data can highlight areas that may require further analysis to gather an understanding of how prior expectations may have been misled. 
+				As its name indicates, Surprise ratios are a way to indicate how <i>surprising</i> the data may be. Such surprising data can highlight areas that may require further analysis to gather an understanding of how prior expectations may have been misled.
 				<br>
 				<br>
 				The actual derived values vary based on what initial expectations were.
@@ -196,10 +196,11 @@
 				For Chicago crime data, initial expectations where defined in accordance with the <b>population</b> within each zip code. We expected that zip codes with larger populations would have equally larger crime rates. We calculated our initial expectations by distributing crime rates across each zip code based on the percentage that it contributes to the city's total population.
 				<br>
 				<br>
-				Surprise is then calculated by measuring each zip code's deviation from its expected value. As indicated by the maps, data can deviate in either a positive or negative manner. 
+				Surprise is then calculated by measuring each zip code's deviation from its expected value. As indicated by the maps, data can deviate in either a positive or negative manner.
 			</p>
 			<script src='https://d3js.org/d3.v4.min.js'></script>
 			<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+			<script src="https://d3js.org/colorbrewer.v1.min.js"></script>
 			<script type='text/javascript' src='./js/mainMaps_v3.js'></script>
 			<script type='text/javascript' src='./js/crimeChart.js'></script>
 			<script type='text/javascript' src='./js/stackedBar.js'></script>
