--- a/index.html
+++ b/index.html
@@ -1,211 +1,101 @@
 <!DOCTYPE html>
 <html>
-<meta charset='utf-8'>
-	<style>
+<title>Chicago Crime Surprise Maps</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+body {font-family: "Lato", sans-serif}
+.mySlides {display: none}
+</style>
+<body>
 
-	.axis--x path {
-		display: none;
-	}
+<!-- Navbar -->
+    <div class="w3-top">
+      <div class="w3-bar w3-black w3-card-2">
+        <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+        <a onclick="window.location.href='index.html'" class="w3-bar-item w3-button w3-padding-large w3-hide-small">HOME</a>
+        <a onclick="window.location.href='viz.html'" class="w3-bar-item w3-button w3-padding-large w3-hide-small">VIZUALIZATION</a>
+        <a onclick="window.location.href='slides.html'" class="w3-bar-item w3-button w3-padding-large w3-hide-small">FINAL PRESENTATION</a>
+        <a onclick="window.location.href='surprisePDF.html'" class="w3-bar-item w3-button w3-padding-large w3-hide-small">MORE INFO ON SURPRISE RATIOS</a>
+      </div>
+    </div>
 
-	.line {
-		fill: none;
-		stroke: steelblue;
-		stroke-width: 1.5px;
-	}
+<!-- Navbar on small screens -->
+<div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
+  <a href="https://docs.google.com/presentation/d/1G0jnQHlvsrKoIZRSzlM7QFWdalpCbGnXW7kMw9HLS3Y" class="w3-bar-item w3-button w3-padding-large">FINAL PRESENTATION</a>
+  <a href="https://idl.cs.washington.edu/files/2017-SurpriseMaps-InfoVis.pdf" class="w3-bar-item w3-button w3-padding-large">MORE INFO ON SURPRISE RATIOS</a>
+  <a onclick="window.location.href='/viz.html'" class="w3-bar-item w3-button w3-padding-large">VIZUALIZATION</a>
+</div>
 
-	.left_background {
-		fill: #eee;
-		pointer-events: all;
-	}
+<!-- Page content -->
+<div class="w3-content" style="max-width:2000px;margin-top:46px">
 
-	.right_background {
-		fill: #eee;
-		pointer-events: all;
-	}
+  <!-- The Description Section -->
+  <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="desc">
+    <h1 class="w3-wide">CHICAGO CRIME SURPRISE MAPS</h1>
+    <p class="w3-opacity"><i>W209 Final Project</i></p>
+    <p class="w3-justify w3-center">As a part of the Data Visualization & Communication course in UC Berkeley's Master of Information & Data Science (MIDS) program, we've developed a data visualization that can be used to geospatially display Surprise Ratios in regards to Chicago crime. Surprise ratios are a measurement of how the data at hand deviates from prior expectations and can be used to counteract biases in the data. For more information on surprise ratios, select the button in the top navigation bar.</p>
 
-	.bottom_background {
-		fill: #fff;
-	}
+  <!-- The Team Section -->
+    <div class="w3-row w3-padding-64">
+      <h2 class="w3-wide">THE TEAM</h2>
+      <br>
+      <div class="w3-third">
+        <img src="images/michael_pic.png" class="w3-round w3-margin-bottom" style="width:70%">
+        <h4>Michael Alexander</h4>
+        <p class="w3-opacity"><i>Washington DC</i></p>
+        <center><p><a href="https://www.linkedin.com/in/michael-alexander-68089179/" style="width:70%" class="w3-button w3-light-grey w3-block">Contact</a></p></center>
+      </div>
+      
+      <div class="w3-third">
+        <img src="images/daghan_pic.jpg" class="w3-round w3-margin-bottom" style="width:70%">
+        <h4>Daghan Atlas</h4>
+        <p class="w3-opacity"><i>San Francisco, California</i></p>
+        <center><p><a href="https://www.linkedin.com/in/daghanaltas/" style="width:70%" class="w3-button w3-light-grey w3-block">Contact</a></p></center>
+      </div>
+      
+      <div class="w3-third">
+        <img src="images/chris_pic.jpg" class="w3-round w3-margin-bottom" style="width:70%">
+        <h4>Christopher Caudill</h4>
+        <p class="w3-opacity"><i>Houston, Texas</i></p>
+        <center><p><a href="https://www.linkedin.com/in/caudillchristopher/" style="width:70%" class="w3-button w3-light-grey w3-block">Contact</a></p></center>
+      </div>
 
-	.bar_background {
-		fill: #fff;
-	}
+    </div>
+  </div>
 
-	.map-layer {
-		fill: #fff;
-		stroke: #aaa;
-	}
+  <!-- The Link to Viz Section -->
+  <div class="w3-black" id="viz">
+    <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
+      <h2 class="w3-wide w3-center">CLICK BELOW TO PROCEED</h2>
+      <p class="w3-center"><a onclick="window.location.href='viz.html'" class="w3-button w3-white w3-round w3-padding-large w3-xlarge">Surprise Maps</a></p>
+    </div>
+  </div>
+  
+<!-- End Page Content -->
+</div>
 
-	text.hover-text{
-		font-size: 22px;
-		font-weight: 400;
-	}
+<!-- Footer -->
+<footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
+  <p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+</footer>
 
-	text.maplabel-text{
-		font-size: 22px;
-		font-weight: 400;
-	}
+<script>
 
-	#slider{
-		width: 905px;
-	}
+// Used to toggle the menu on small screens when clicking on the menu button
+function myFunction() {
+    var x = document.getElementById("navDemo");
+    if (x.className.indexOf("w3-show") == -1) {
+        x.className += " w3-show";
+    } else { 
+        x.className = x.className.replace(" w3-show", "");
+    }
+}
 
-	#slider p{
-		text-align: center;
-		font-family: Tahoma;
-		font-size: 16px;
-	}
+</script>
 
-	#slider span{
-		text-align: center;
-		font-family: Tahoma;
-		font-size: 18px;
-		vertical-align: middle;
-    	padding:0px;
-    	margin:0px;
-	}
-
-	#slider input{
-		width:80%;
-	}
-
-	#catLabel{
-		font-size: 20px;
-		font-family: Tahoma;
-	}
-
-	#opts {
-		font-size: 16px;
-		font-family: Tahoma;
-	}
-
-	#sliderLabel {
-		font-size: 20px;
-		font-family: Tahoma;
-		vertical-align: middle;
-    	padding:0px;
-    	margin:0px;
-	}
-
-	#year {
-		vertical-align: middle;
-    	padding:0px;
-    	margin:0px;
-	}
-
-	body {
-    width: 100%;
-    height:100%;
-    border: 1px solid gray;
-    margin: auto;
-    padding: 1em;
-	}
-
-	h1{
-		font-family:Tahoma;
-		margin: auto;
-		padding: 1em;
-	}
-
-	div.container{
-		margin-right: 15%;
-	}
-
-	svg{
-		display: block;
-		margin-left: 5%;
-		position: relative;
-		width: 74%;
-	}
-
-	article{
-		font-family:Tahoma;
-		position: absolute;
-		margin-left: 80%;
-		overflow: hidden;
-	}
-
-	</style>
-	<body>
-		<center>
-			<h1>Chicago Crime Surprise Maps</h1>
-			<div id='slider'>
-					<label id='sliderLabel' for='year'>Select Year:  </label>
-					<input type='range' id='year' value='2001' min='2001' max='2016' step = '1' oninput='update(value, curCrimeType); updateBars();' />
-					<span id='yearLabel'>2001</span>
-			</div>
-			<div id='crime_category'>
-					<form name='crime'>
-						<label id='catLabel' for='opts'>Select Crime Category:  </label>
-							<select id='opts' onchange='update(curYear,value)'>
-									<option value='TOTAL CRIME'>TOTAL CRIME</option>
-									<option value='ARSON'>ARSON</option>
-									<option value='ASSAULT'>ASSAULT</option>
-									<option value='BATTERY'>BATTERY</option>
-									<option value='BURGLARY'>BURGLARY</option>
-									<option value='CONCEALED CARRY LICENSE VIOLATION'>CONCEALED CARRY LICENSE VIOLATION</option>
-									<option value='CRIM SEXUAL ASSAULT'>CRIM SEXUAL ASSAULT</option>
-									<option value='CRIMINAL DAMAGE'>CRIMINAL DAMAGE</option>
-									<option value='CRIMINAL TRESPASS'>CRIMINAL TRESPASS</option>
-									<option value='DECEPTIVE PRACTICE'>DECEPTIVE PRACTICE</option>
-									<option value='DOMESTIC VIOLENCE'>DOMESTIC VIOLENCE</option>
-									<option value='GAMBLING'>GAMBLING</option>
-									<option value='HOMICIDE'>HOMICIDE</option>
-									<option value='HUMAN TRAFFICKING'>HUMAN TRAFFICKING</option>
-									<option value='INTERFERENCE WITH PUBLIC OFFICER'>INTERFERENCE WITH PUBLIC OFFICER</option>
-									<option value='INTIMIDATION'>INTIMIDATION</option>
-									<option value='KIDNAPPING'>KIDNAPPING</option>
-									<option value='LIQUOR LAW VIOLATION'>LIQUOR LAW VIOLATION</option>
-									<option value='MOTOR VEHICLE THEFT'>MOTOR VEHICLE THEFT</option>
-									<option value='NARCOTICS'>NARCOTICS</option>
-									<option value='NON - CRIMINAL'>NON - CRIMINAL</option>
-									<option value='NON-CRIMINAL'>NON-CRIMINAL</option>
-									<option value='NON-CRIMINAL (SUBJECT SPECIFIED)'>NON-CRIMINAL (SUBJECT SPECIFIED)</option>
-									<option value='OBSCENITY'>OBSCENITY</option>
-									<option value='OFFENSE INVOLVING CHILDREN'>OFFENSE INVOLVING CHILDREN</option>
-									<option value='OTHER NARCOTIC VIOLATION'>OTHER NARCOTIC VIOLATION</option>
-									<option value='OTHER OFFENSE'>OTHER OFFENSE</option>
-									<option value='PROSTITUTION'>PROSTITUTION</option>
-									<option value='PUBLIC INDECENCY'>PUBLIC INDECENCY</option>
-									<option value='PUBLIC PEACE VIOLATION'>PUBLIC PEACE VIOLATION</option>
-									<option value='RITUALISM'>RITUALISM</option>
-									<option value='ROBBERY'>ROBBERY</option>
-									<option value='SEX OFFENSE'>SEX OFFENSE</option>
-									<option value='STALKING'>STALKING</option>
-									<option value='THEFT'>THEFT</option>
-									<option value='WEAPONS VIOLATION'>WEAPONS VIOLATION</option>
-							</select>
-					</form>
-			</div>
-		</center>
-		<br></br>
-		<article>
-			<h2>Surprise Ratio Explained</h2>
-			<p>
-				<b>Surprise ratio</b> is a measure of how the data being analyzed deviates from prior expectations.
-				<br>
-				<br>
-				As its name indicates, Surprise ratios are a way to indicate how <i>surprising</i> the data may be. Such surprising data can highlight areas that may require further analysis to gather an understanding of how prior expectations may have been misled.
-				<br>
-				<br>
-				The actual derived values vary based on what initial expectations were.
-			</p>
-
-			<h2>Chicago Crime Expectations & Surprise</h2>
-			<p>
-				For Chicago crime data, initial expectations where defined in accordance with the <b>population</b> within each zip code. We expected that zip codes with larger populations would have equally larger crime rates. We calculated our initial expectations by distributing crime rates across each zip code based on the percentage that it contributes to the city's total population.
-				<br>
-				<br>
-				Surprise is then calculated by measuring each zip code's deviation from its expected value. As indicated by the maps, data can deviate in either a positive or negative manner.
-			</p>
-			<script src='https://d3js.org/d3.v4.min.js'></script>
-			<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
-			<script src="https://d3js.org/colorbrewer.v1.min.js"></script>
-			<script type='text/javascript' src='./js/mainMaps_v3.js'></script>
-			<script type='text/javascript' src='./js/crimeChart.js'></script>
-			<script type='text/javascript' src='./js/stackedBar.js'></script>
-			<script type='text/javascript' src='./js/heatmap.js'></script>
-		</article>
-
-	</body>
+</body>
 </html>
