Correctly merged daghans heatmap updates

--- a/viz.html
+++ b/viz.html
@@ -218,7 +218,7 @@
 			<script type='text/javascript' src='./js/mainMaps_v4.js'></script>
 			<script type='text/javascript' src='./js/crimeChart_realign.js'></script>
 			<script type='text/javascript' src='./js/stackedBar.js'></script>
-			<script type='text/javascript' src='./js/heatmap_realign.js'></script>
+			<script type='text/javascript' src='./js/heatmap_v2.js'></script>
 
 	</body>
 </html>
